Enhance weather data management and API endpoints
Updated DomeinController to include new managers for weather reports, measurements, and weather stations. Added required properties to DTOs for measurements and weather reports. Refactored Stad-related files to use the new model structure. Introduced new classes and interfaces for managing measurements and weather stations. Restored city data in steden.json and added new API endpoints for retrieving measurements and weather reports.

--- a/WeerStart/WeerStart/WeerEventsApi/WeerEventsApi.csproj
+++ b/WeerStart/WeerStart/WeerEventsApi/WeerEventsApi.csproj
@@ -7,11 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <None Include="Steden\Steden.json" />
+      <Folder Include="Model\Metingen\Data\" />
+      <Folder Include="Model\Weerberichts\Data\" />
     </ItemGroup>
 
 </Project>
